CI/CD: testflight 빌드, 배포 자동화
빌드 및 배포에 소요되는 시간 단축

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,9 @@ DerivedData/
 *.xcodeproj
 *.xcworkspace
 
+### xcconfig ###
+*.xcconfig
+
 ### Tuist derived files ###
 graph.dot
 Derived/
@@ -70,3 +73,6 @@ Derived/
 Tuist/Dependencies
 Tuist/*.key
 Tuist/Signing
+
+### Fastale ###
+fastlane/.env
