--- a/.github/workflows/upload_testflight.yml
+++ b/.github/workflows/upload_testflight.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Install Fastlane
         run: brew install fastlane
 
+      - name: Install OpenSSL
+        run: brew install openssl
+
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.7
