--- a/.github/workflows/upload_testflight.yml
+++ b/.github/workflows/upload_testflight.yml
@@ -28,7 +28,8 @@ jobs:
           token: ${{ secrets.ACTION_TOKEN }}
 
       - name: Setting Master Key
-        run: echo "${MASTER_KEY//[$'\r\n']}" > Tuist/master.key
+        run: |
+          echo "$MASTER_KEY" > Tuist/master.key
         env:
           MASTER_KEY: ${{secrets.MASTER_KEY}}
 
