--- a/.github/workflows/upload_testflight.yml
+++ b/.github/workflows/upload_testflight.yml
@@ -49,8 +49,21 @@ jobs:
       - name: Tuist fetch
         run: tuist fetch
 
+      - name: Log Pre-Decrypt Certificate File Details
+        run: ls -l ./Tuist/Signing/development.cer
+
+      - name: Output Master Key Length and Checksum
+        run: |
+          echo "Master Key Length: ${#MASTER_KEY}"
+          echo "Master Key Checksum: $(echo -n $MASTER_KEY | shasum -a 256)"
+        env:
+          MASTER_KEY: ${{secrets.MASTER_KEY}}
+
       - name: Tuist Signing Decrypt
         run: tuist signing decrypt
+
+      - name: Log Post-Decrypt Certificate File Details
+        run: ls -l ./Tuist/Signing/development.cer
 
       - name: Set Keychain
         run: fastlane set_keychain
