--- a/.github/workflows/upload_testflight.yml
+++ b/.github/workflows/upload_testflight.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Setting Master Key
         run: |
-          echo "$MASTER_KEY" > ./Tuist/master.key
+          echo -n "$MASTER_KEY" > ./Tuist/master.key
         env:
           MASTER_KEY: ${{ secrets.MASTER_KEY }}
 
