--- a/.github/workflows/upload_testflight.yml
+++ b/.github/workflows/upload_testflight.yml
@@ -28,8 +28,7 @@ jobs:
           token: ${{ secrets.ACTION_TOKEN }}
 
       - name: Setting Master Key
-        run: |
-          echo -n "$MASTER_KEY" > ./Tuist/master.key
+        run: echo "$MASTER_KEY" | tr -d '\n' > ./Tuist/master.key
         env:
           MASTER_KEY: ${{ secrets.MASTER_KEY }}
 
