--- a/.github/workflows/upload_testflight.yml
+++ b/.github/workflows/upload_testflight.yml
@@ -28,13 +28,12 @@ jobs:
           token: ${{ secrets.ACTION_TOKEN }}
 
       - name: Setting Master Key
-        run: echo "$MASTER_KEY" > ./Tuist/master.key
+        run: echo -n "${{ secrets.MASTER_KEY }}" > ./Tuist/master.key
         env:
           MASTER_KEY: ${{ secrets.MASTER_KEY }}
-
-      - name: Output Master Key Checksum
-        run: |
-          echo "Master Key Checksum: $(cat ${{ secrets.MASTER_KEY }} | shasum -a 256)"
+      
+      - name: Output Stored Master Key Checksum
+        run: shasum -a 256 ./Tuist/master.key
 
       - name: Install Tuist
         run: curl -Ls https://install.tuist.io|bash
