--- a/.github/workflows/upload_testflight.yml
+++ b/.github/workflows/upload_testflight.yml
@@ -1,8 +1,9 @@
 name: UploadTestflight
 
 on:
-  push:
-    branches: [develop]
+  create:
+    branches:
+      - release/*
 
 jobs:
   upload_testflight:
