--- a/.github/workflows/upload_testflight.yml
+++ b/.github/workflows/upload_testflight.yml
@@ -1,9 +1,9 @@
 name: UploadTestflight
 
 on:
-  create:
+  push:
     branches:
-      - release/*
+      - 'release/*'
 
 jobs:
   upload_testflight:
